# i2a2_desafio04

./: .gitignore  main.py  tools.py
desafio04_python/: README.md  pyproject.toml  requirements.txt  settings.py
