[project]
name = "desafio04-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "xlsxwriter>=3.2.5",
]
